Revert "fix: swirl pagination gap for all variants"
This reverts commit 7fad152a930734bf200e7a4fa558873a1fdb854c.

--- a/packages/swirl-components/src/components/swirl-pagination/swirl-pagination.css
+++ b/packages/swirl-components/src/components/swirl-pagination/swirl-pagination.css
@@ -14,6 +14,12 @@
   width: 100%;
 }
 
+.pagination--variant-simple {
+  & .pagination__list {
+    gap: 0;
+  }
+}
+
 .pagination__list {
   display: flex;
   margin: 0;
@@ -22,7 +28,6 @@
   align-items: center;
   line-height: var(--s-line-height-base);
   list-style: none;
-  gap: var(--s-space-4);
 
   @media (--from-desktop-without-touch) {
     font-size: var(--s-font-size-sm);
